--- a/holidays.yml
+++ b/holidays.yml
@@ -776,6 +776,8 @@
 2019-11-04: 振替休日
 2019-11-23: 勤労感謝の日
 2020-01-01: 元日
+2020-01-02: FT年始
+2020-01-03: FT年始
 2020-01-13: 成人の日
 2020-02-11: 建国記念の日
 2020-02-23: 天皇誕生日
@@ -789,10 +791,16 @@
 2020-07-23: 海の日
 2020-07-24: スポーツの日
 2020-08-10: 山の日
+2020-08-12: FT盆
+2020-08-13: FT盆
+2020-08-14: FT盆
 2020-09-21: 敬老の日
 2020-09-22: 秋分の日
 2020-11-03: 文化の日
 2020-11-23: 勤労感謝の日
+2020-12-29: FT年末
+2020-12-30: FT年末
+2020-12-31: FT年末
 2021-01-01: 元日
 2021-01-11: 成人の日
 2021-02-11: 建国記念の日
