--- a/holidays.yml
+++ b/holidays.yml
@@ -815,10 +815,16 @@
 2021-07-23: スポーツの日
 2021-08-08: 山の日
 2021-08-09: 振替休日
+2021-08-12: FT盆
+2021-08-13: FT盆
+2021-08-16: FT盆
 2021-09-20: 敬老の日
 2021-09-23: 秋分の日
 2021-11-03: 文化の日
 2021-11-23: 勤労感謝の日
+2021-12-29: FT年末
+2021-12-30: FT年末
+2021-12-31: FT年末
 2022-01-01: 元日
 2022-01-10: 成人の日
 2022-02-11: 建国記念の日
