--- a/holidays.yml
+++ b/holidays.yml
@@ -826,6 +826,7 @@
 2021-12-30: FT年末
 2021-12-31: FT年末
 2022-01-01: 元日
+2022-01-03: FT年始
 2022-01-10: 成人の日
 2022-02-11: 建国記念の日
 2022-02-23: 天皇誕生日
@@ -836,11 +837,17 @@
 2022-05-05: こどもの日
 2022-07-18: 海の日
 2022-08-11: 山の日
+2022-08-12: FT盆
+2022-08-13: FT盆
+2022-08-15: FT盆
 2022-09-19: 敬老の日
 2022-09-23: 秋分の日
 2022-10-10: スポーツの日
 2022-11-03: 文化の日
 2022-11-23: 勤労感謝の日
+2022-12-29: FT年末
+2022-12-30: FT年末
+2022-12-31: FT年末
 2023-01-01: 元日
 2023-01-02: 振替休日
 2023-01-09: 成人の日
