--- a/holidays.yml
+++ b/holidays.yml
@@ -850,6 +850,7 @@
 2022-12-31: FT年末
 2023-01-01: 元日
 2023-01-02: 振替休日
+2023-01-03: FT年始
 2023-01-09: 成人の日
 2023-02-11: 建国記念の日
 2023-02-23: 天皇誕生日
@@ -860,11 +861,14 @@
 2023-05-05: こどもの日
 2023-07-17: 海の日
 2023-08-11: 山の日
+2023-08-14: FT盆
+2023-08-15: FT盆
 2023-09-18: 敬老の日
 2023-09-23: 秋分の日
 2023-10-09: スポーツの日
 2023-11-03: 文化の日
 2023-11-23: 勤労感謝の日
+2023-12-29: FT年末
 2024-01-01: 元日
 2024-01-08: 成人の日
 2024-02-11: 建国記念の日
