--- a/holidays.yml
+++ b/holidays.yml
@@ -870,6 +870,8 @@
 2023-11-23: 勤労感謝の日
 2023-12-29: FT年末
 2024-01-01: 元日
+2024-01-02: FT年始
+2024-01-03: FT年始
 2024-01-08: 成人の日
 2024-02-11: 建国記念の日
 2024-02-12: 振替休日
@@ -883,6 +885,9 @@
 2024-07-15: 海の日
 2024-08-11: 山の日
 2024-08-12: 振替休日
+2024-08-13: FT盆
+2024-08-14: FT盆
+2024-08-15: FT盆
 2024-09-16: 敬老の日
 2024-09-22: 秋分の日
 2024-09-23: 振替休日
@@ -890,6 +895,8 @@
 2024-11-03: 文化の日
 2024-11-04: 振替休日
 2024-11-23: 勤労感謝の日
+2024-12-30: FT年末
+2024-12-31: FT年末
 2025-01-01: 元日
 2025-01-13: 成人の日
 2025-02-11: 建国記念の日
