--- a/holidays.yml
+++ b/holidays.yml
@@ -898,6 +898,8 @@
 2024-12-30: FT年末
 2024-12-31: FT年末
 2025-01-01: 元日
+2025-01-02: FT年始
+2025-01-03: FT年始
 2025-01-13: 成人の日
 2025-02-11: 建国記念の日
 2025-02-23: 天皇誕生日
@@ -910,12 +912,18 @@
 2025-05-06: 振替休日
 2025-07-21: 海の日
 2025-08-11: 山の日
+2025-08-13: FT盆
+2025-08-14: FT盆
+2025-08-15: FT盆
 2025-09-15: 敬老の日
 2025-09-23: 秋分の日
 2025-10-13: スポーツの日
 2025-11-03: 文化の日
 2025-11-23: 勤労感謝の日
 2025-11-24: 振替休日
+2025-12-29: FT年末
+2025-12-30: FT年末
+2025-12-31: FT年末
 2026-01-01: 元日
 2026-01-12: 成人の日
 2026-02-11: 建国記念の日
